--- a/RoL/rol.html
+++ b/RoL/rol.html
@@ -1,89 +1,123 @@
-<!----- Investigator Info ------->
-<h1> Test </h1>
-<div class="sheet-grid-section">
-
-	<div class="sheet-portrait sheet-block">
-	    <label>Rivers of London</label>
-	    <div>
-			<label>Name</label>
-			<input name="attr_character_name" type="text">
-		</div>
-		<div>
-		    <img name="attr_character_avatar">
-		</div>
-	</div>
-	
+<div class="sheet-header">
+	<span>Rivers of London - version 0.1 alpha</span> 
+</div>
+<div class="sheet-grid-section">	
 	<div class="sheet-bio sheet-block">
-	    <label>Investigator Info</label>
+	    <h4 class="sheet-section-head">Investigator Info</h4>
 		<div>
-			<label>Occupation</label>
-			<input name="attr_character_occupation" type="text">
+			<label class="sheet-bio-label">Occupation</label>
+			<input class="sheet-bio-input" name="attr_character_occupation" type="text">
 		</div>
 		<div>
-			<label>Place of birth</label>
-			<input name="attr_character_birthplace" type="text">
+			<label class="sheet-bio-label">Place of birth</label>
+			<input class="sheet-bio-input" name="attr_character_birthplace" type="text">
 		</div>
 		<div>
-			<label>Residence</label>
-			<input name="attr_character_residence" type="text">
+			<label class="sheet-bio-label">Residence</label>
+			<input class="sheet-bio-input" name="attr_character_residence" type="text">
 		</div>
 		<div>
-			<label>Pronoun</label>
-			<input name="attr_character_pronoun" type="text">
+			<label class="sheet-bio-label">Pronoun</label>
+			<input class="sheet-bio-input" name="attr_character_pronoun" type="text">
 		</div>
 		<div>
-			<label>Age</label>
-			<input name="attr_character_age" type="text">
+			<label class="sheet-bio-label">Age</label>
+			<input class="sheet-bio-input" name="attr_character_age" type="text">
 		</div>
 		<div>
-			<label>Affluence: </label>
-			<input name="attr_character_affluence" type="text">
+			<label class="sheet-bio-label">Affluence</label>
+			<input class="sheet-bio-input" name="attr_character_affluence" type="text">
 		</div>		
-		<div>
-			<label>Notes: </label>
-			<input name="attr_character_affluence" type="text">
-		</div>
 	</div>
 	
 	<div class="sheet-stats sheet-block">
-	    <label>Characteristics</label>
+	    <h4 class="sheet-section-head">Characteristics</h4>
 		<div>
-			<label>STR</label>
-			<input name="attr_character_str" type="text">
+			<label class="sheet-short-label">STR</label>
+			<input name="attr_character_str" type="number" min="0" max="100">
+			<span>/</span>
+			<input name="attr_character_str_half" type="number" value="(@{attr_character_str}/2)" readonly="true"> 				
 		</div>
 		<div>
-			<label>CON</label>
-			<input name="attr_character_con" type="text">
+			<label class="sheet-short-label">CON</label>
+			<input name="attr_character_con" type="number" min="0" max="100"> 
+			<span>/</span>
+			<input name="attr_character_con_half" type="number" value="(@{attr_character_con}/2)" readonly="true"> 			
 		</div>
 		<div>
-			<label>DEX</label>
-			<input name="attr_character_dex" type="text">
+			<label class="sheet-short-label">DEX</label>
+			<input name="attr_character_dex" type="number" min="0" max="100">
+			<span>/</span>
+			<input name="attr_character_dex_half" type="number" value="(@{attr_character_dex_half}/2)" readonly="true"> 				
 		</div>
 		<div>
-			<label>INT</label>
-			<input name="attr_character_int" type="text">
+			<label class="sheet-short-label">INT</label>
+			<input name="attr_character_int" type="number" min="0" max="100">
+			<span>/</span>
+			<input name="attr_character_int_half" type="number" value="(@{attr_character_int_half}/2)" readonly="true"> 				
 		</div>
 		<div>
-			<label>POW</label>
-			<input name="attr_character_pow" type="text">
+			<label class="sheet-short-label">POW</label>
+			<input name="attr_character_pow" type="number" min="0" max="100">
+			<span>/</span>
+			<input name="attr_character_pow_half" type="number" value="(@{attr_character_pow_half}/2)" readonly="true"> 				
 		</div>
 	</div>
 	
 	<div class="sheet-sup sheet-block">
-	    <label>Suplimental info</label>
+	    <h4 class="sheet-section-head">Suplimental info</h4>
 		<div>
-			<label>MOV</label>
-			<input name="attr_character_mov" type="text">
+			<label class="sheet-short-label">MOV</label>
+			<input name="attr_character_mov" type="number">
 		</div>
 		<div>
-			<label>Luck</label>
-			<input name="attr_character_luck" type="text">
+			<label class="sheet-short-label">Luck</label>
+			<input name="attr_character_luck" type="number">
+			<span>/</span>
+			<input name="attr_character_luck_current" type="number">
 		</div>
 		<div>
-			<label>Magic pts </label>
-			<input name="attr_character_magicpts" type="text">
+			<label class="sheet-short-label">Magic pts </label>
+			<input name="attr_character_magicpts" type="number">
+			<span>/</span>
+			<input name="attr_character_magicpts_current" type="number">
 		</div>
 	</div>
+	
+	<div class="sheet-notes sheet-block">
+	    <h4 class="sheet-section-head">Notes</h4>
+		<div>
+			<textarea name="attr_character_notes" rows="3"></textarea>
+		</div>
+	</div>
+	
+	<div class="sheet-advantages sheet-block">
+
+		<h4 class="sheet-section-head">Advantages & disadvantages</h4>
+	</div>
+	
+	<div class="sheet-common sheet-block">
+	    <h4 class="sheet-section-head">Common skills</h4>
+	</div>
+	
+	<div class="sheet-expert sheet-block">
+	    <h4 class="sheet-section-head">Expert skills</h4>
+	</div>
+	
+	<div class="sheet-combat sheet-block">
+	    <h4 class="sheet-section-head">Combat skills</h4>
+	</div>
+	
+	<div class="sheet-damage sheet-block">
+	    <h4 class="sheet-section-head">Damage</h4>
+	</div>
+	
+	<div class="sheet-weapons sheet-block">
+	    <h4 class="sheet-section-head">Weapons</h4>
+	</div>
+	
+	<div class="sheet-magic sheet-block">
+	    <h4 class="sheet-section-head">Magic</h4>
+	</div>
+		
 </div>
-
-
