--- a/RoL/rol.html
+++ b/RoL/rol.html
@@ -36,32 +36,38 @@
 			<label class="sheet-short-label">STR</label>
 			<input name="attr_character_str" type="number" min="0" max="100">
 			<span>/</span>
-			<input name="attr_character_str_half" type="number" value="(@{attr_character_str}/2)" readonly="true"> 				
+			<input name="attr_character_str_half" type="number" value=value="floor(@{character_str}/2)" disabled="true"> 	
+			<button name="roll_strength" type="roll" value="&{template:default} {{name=Strength}} {{success=[[@{character_str}]] hard=[[@{character_str}]]}} {{roll=[[d100]]}}"></button>
 		</div>
 		<div>
 			<label class="sheet-short-label">CON</label>
 			<input name="attr_character_con" type="number" min="0" max="100"> 
 			<span>/</span>
-			<input name="attr_character_con_half" type="number" value="(@{attr_character_con}/2)" readonly="true"> 			
+			<input name="attr_character_con_half" type="number" value="floor(@{character_con}/2)" disabled="true"> 	
+			<button name="roll_con" type="roll" value="&{template:default} {{name=Constitution}} {{success=[[@{character_con}]]}} {{half=[[floor(@{character_dex}/2)]]}} {{roll=[[d100]]}}"></button>
 		</div>
 		<div>
 			<label class="sheet-short-label">DEX</label>
 			<input name="attr_character_dex" type="number" min="0" max="100">
 			<span>/</span>
-			<input name="attr_character_dex_half" type="number" value="(@{attr_character_dex_half}/2)" readonly="true"> 				
+			<input name="attr_character_dex_half" type="number" value="floor(@{character_dex}/2" disabled="true"> 	
+			<button name="roll_dex" type="roll" value="&{template:default} {{name=Dexterity}} {{hard=[[@{character_dex_half}]]}} {{roll=[[d100]]}}"></button>
 		</div>
 		<div>
 			<label class="sheet-short-label">INT</label>
 			<input name="attr_character_int" type="number" min="0" max="100">
 			<span>/</span>
-			<input name="attr_character_int_half" type="number" value="(@{attr_character_int_half}/2)" readonly="true"> 				
+			<input name="attr_character_int_half" type="number" value="floor(@{character_int}/2)" disabled="true"> 
+		    <button name="roll_int" type="roll" value="&{template:default} {{name=Intelligence}} {{success=[[@{character_int}]] hard=[[floor(@{character_dex}/2)]]}} {{roll=[[d100]]}}"></button>
 		</div>
 		<div>
 			<label class="sheet-short-label">POW</label>
 			<input name="attr_character_pow" type="number" min="0" max="100">
 			<span>/</span>
-			<input name="attr_character_pow_half" type="number" value="(@{attr_character_pow_half}/2)" readonly="true"> 				
+			<input name="attr_character_pow_half" type="number" value="floor(@{character_pow}/2)" disabled="true"> 	
+			<button class='roll_pow' type='roll' value='&{template:coc} {{name=@{character_pow}}} {{success=[[@{character_pow}]]}} {{hard=[[@{character_pow_half}]]}} {{roll1=[[1d100]]}} {{roll2=[[1d100]]}}' name='roll_pow_check' />
 		</div>
+		<div><p></p></div>
 	</div>
 	
 	<div class="sheet-sup sheet-block">
@@ -77,7 +83,7 @@
 			<input name="attr_character_luck_current" type="number">
 		</div>
 		<div>
-			<label class="sheet-short-label">Magic pts </label>
+			<label class="sheet-short-label">Magic</label>
 			<input name="attr_character_magicpts" type="number">
 			<span>/</span>
 			<input name="attr_character_magicpts_current" type="number">
@@ -86,7 +92,7 @@
 	
 	<div class="sheet-notes sheet-block">
 	    <h4 class="sheet-section-head">Notes</h4>
-		<div>
+		<div class="sheet-textarea-div">
 			<textarea name="attr_character_notes" rows="3"></textarea>
 		</div>
 	</div>
