--- a/RoL/rol.html
+++ b/RoL/rol.html
@@ -161,7 +161,7 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_athletics_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Athletics}} {{success=[[@{character_athletics}]]}} {{hard=[[@{character_athletics_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Drive</label>
@@ -170,7 +170,7 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_drive_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Drive}} {{success=[[@{character_drive}]]}} {{hard=[[@{character_drive_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>    		
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Navigate</label>
@@ -179,7 +179,7 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_navigate_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Navigate}} {{success=[[@{character_navigate}]]}} {{hard=[[@{character_navigate_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Observation</label>
@@ -188,16 +188,16 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_observation_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Observation}} {{success=[[@{character_observation}]]}} {{hard=[[@{character_observation_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Read Person</label>
     			<input name="attr_character_readp" class="sheet-input-align-top" type="number" min="0" max="100">
     			<span>/</span>
     			<input type="number" class="sheet-input-align-top" name="attr_character_readp_half" value="0" readonly>
-   			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name='Read Person'}} {{success=[[@{character_readp}]]}} {{hard=[[@{character_readp_half}]]}} {{roll=[[d100]]}}"></button>
+   			    <button name="roll_str" type="roll" value="&{template:rol-percent}  {{character_name=@{character_name}}} {{name=Read Person}} {{success=[[@{character_readp}]]}} {{hard=[[@{character_readp_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Research</label>
@@ -206,16 +206,16 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_research_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Research}} {{success=[[@{character_research}]]}} {{hard=[[@{character_research_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Sense Vestigia</label>
     			<input name="attr_character_sensev" class="sheet-input-align-top" type="number" min="0" max="100">
     			<span>/</span>
     			<input type="number" class="sheet-input-align-top" name="attr_character_sensev_half" value="0" readonly>
-   			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name='Sense Vestigia'}} {{success=[[@{character_sensev}]]}} {{hard=[[@{character_sensev_half}]]}} {{roll=[[d100]]}}"></button>
+   			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Sense Vestigia}} {{success=[[@{character_sensev}]]}} {{hard=[[@{character_sensev_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Social</label>
@@ -224,7 +224,7 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_social_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Social}} {{success=[[@{character_social}]]}} {{hard=[[@{character_social_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>    		
     		<div class="sheet-section-row">
     			<label class="sheet-long-label">Stealth</label>
@@ -233,7 +233,7 @@
     			<input type="number" class="sheet-input-align-top" name="attr_character_stealth_half" value="0" readonly>
    			    <button name="roll_str" type="roll" value="&{template:rol-percent} {{character_name=@{character_name}}} {{name=Stealth}} {{success=[[@{character_stealth}]]}} {{hard=[[@{character_stealth_half}]]}} {{roll=[[d100]]}}"></button>
    			    <br>
-   			    <span class="sheet-hint-short-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
+   			    <span class="sheet-hint-long-label">&nbsp;</span><span class="sheet-hint-full">Full</span><span class="sheet-hint-half">Half</span>
     		</div>    		
     	</div>
     	
@@ -265,7 +265,9 @@
 <rolltemplate class="sheet-rolltemplate-rol-percent">
     <div class="sheet-template-charname">{{character_name}}</div>
     <div class="sheet-template-container">
-    	<div class="sheet-template-rollname">{{name}}</div>
+    	<div class="sheet-template-rollname">
+            {{name}}      
+    	</div>
     	<div class="sheet-template-values">Values: {{success}} / {{hard}}</div>
     	<div class="sheet-template-result">
     	    {{#rollGreater() roll success}}
@@ -283,7 +285,6 @@
     </div>
 </rolltemplate>
 
-
 <!-- ==== Sheet worker ==== -->
 
 <script type="text/worker">
@@ -295,6 +296,15 @@
             "character_dex",
             "character_int",
             "character_pow",
+            "character_athletics",
+            "character_drive",
+            "character_navigate",
+            "character_observation",
+            "character_readp",    
+            "character_research",
+            "character_sensev",
+            "character_social",  
+            "character_stealth",  
     ]
     
     // perform the update
@@ -331,6 +341,33 @@
     });
     on("change:character_pow", function() { 
         updateHalfAttr("character_pow");
+    });
+    on("change:character_athletics", function() { 
+       updateHalfAttr("character_athletics");
+    });
+    on("change:character_drive", function() { 
+       updateHalfAttr("character_drive");
+    });
+    on("change:character_navigate", function() { 
+        updateHalfAttr("character_navigate");
+    });
+    on("change:character_observation", function() { 
+        updateHalfAttr("character_observation");
+    });
+    on("change:character_readp", function() { 
+        updateHalfAttr("character_readp");
+    });
+    on("change:character_research", function() { 
+       updateHalfAttr("character_research");
+    });
+    on("change:character_sensev", function() { 
+       updateHalfAttr("character_sensev");
+    });
+    on("change:character_social", function() { 
+        updateHalfAttr("character_social");
+    });
+    on("change:character_stealth", function() { 
+        updateHalfAttr("character_stealth");
     });
 
 </script>
