contact state now an icon

--- a/RoL/rol.html
+++ b/RoL/rol.html
@@ -493,38 +493,38 @@
     	           <div class="sheet-2colrow sheet-contacts-div">
     	                <div class="sheet-col">
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact1_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contact1_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact1_state" type="checkbox"><span></span>
                      		</div>
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact2_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contac2_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact2_state" type="checkbox"><span></span>
                      		</div>
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact3_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contac3_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact3_state" type="checkbox"><span></span>
                      		</div>
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact4_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contact4_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact4_state" type="checkbox"><span></span>
                      		</div>                     		
                      	</div>
     	                <div class="sheet-col">
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact5_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contact5_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact5_state" type="checkbox"><span></span>
                      		</div>
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact6_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contact6_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact6_state" type="checkbox"><span></span>
                      		</div>
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact7_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contact7_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact7_state" type="checkbox"><span></span>
                      		</div>
                 	        <div class="sheet-section-row">
-                    		    <input class="sheet-contact-state" name="attr_character_contact8_state" type="checkbox">
                     			<input class="sheet-contact-details" name="attr_character_contact8_details" type="text">
+                    			<input class="sheet-contact-state" name="attr_character_contact8_state" type="checkbox"><span></span>
                      		</div>                     		
                      	</div>
                     </div>
