--- a/RoL/rol.html
+++ b/RoL/rol.html
@@ -556,19 +556,89 @@
                             	<input class="sheet-magic-mastery" name="attr_character_magic_mastery1" type="checkbox">
                             	<input class="sheet-magic-order" name="attr_character_magic_order1" type="number" min="1" max="6">
                             	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
                              </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery2" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order2" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery3" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order3" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div> 
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery4" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order4" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery5" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order5" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>                               
                         </div>
                         <div class="sheet-col"> 
                     		<div class="sheet-section-row">
                             	<input class="sheet-magic-mastery" name="attr_character_magic_mastery6" type="checkbox">
                             	<input class="sheet-magic-order" name="attr_character_magic_order6" type="number" min="1" max="6">
                             	<input class="sheet-magic-name" name="attr_character_magic_name6" type="text">
+                                <br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery7" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order3" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery8" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order3" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery9" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order3" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
+                             </div>  
+                    		<div class="sheet-section-row">
+                            	<input class="sheet-magic-mastery" name="attr_character_magic_mastery10" type="checkbox">
+                            	<input class="sheet-magic-order" name="attr_character_magic_order3" type="number" min="1" max="6">
+                            	<input class="sheet-magic-name" name="attr_character_magic_name1" type="text">
+                            	<br>
+                            	<span class="sheet-hint-mastery">&nbsp;</span><span class="sheet-hint-order">Order</span><span class="sheet-hint-magic-name">Name</span>
                              </div>  
                         </div>
                     </div>
             	</div>
                 <div class="sheet-section-inner-container sheet-demimonde-only">
             		<h4 class="sheet-section-head">Afinity & Manifestations</h4>
+            		<div class="sheet-section-row">
+            		    <textarea class="sheet-afinity" rows="4"></textarea>
+            		</div>
+            		<div class="sheet-section-row">
+            		    <div class="sheet-manifestation-cost-section">
+                		    <span class="sheet-manifestation-cost-item">Everyday manifestation = 5 luck points</span>
+                		    <br>
+                		    <span class="sheet-manifestation-cost-item">Significant manifestation = 20 luck points</span>
+                		</div>
+            		</div>            		
             	</div>
         	</div>
         </div>
