Playing with edit mode styles

--- a/RoL/rol.html
+++ b/RoL/rol.html
@@ -103,7 +103,8 @@
                 	    <input type="hidden" class="sheet-lock-state" name="attr_character_lock_state"/>
                 	    
             			<label class="sheet-label sheet-label-medium-width">Residence</label>
-            			<textarea class="sheet-textarea-residence" name="attr_character_residence" rows="2"></textarea>
+            			<textarea class="sheet-textarea-residence sheet-text-edit" name="attr_character_residence"></textarea>
+            			<textarea class="sheet-textarea-residence sheet-text-readonly" name="attr_character_residence" readonly></textarea>
             		</div>
                 	<div  class="sheet-section-row">
                 	    <!-- spacer -->
